@@ -1,7 +1,9 @@
+TAG: strainload-6-0-14-3
 TAG: strainload-6-0-14-2
 DATE: 07/31/2019
 STAFF: lec 
 TR12232/added db.setTrace()
+move BCP to python
 
 TAG: strainload-6-0-14-1
 DATE: 04/03/2019
